package entities

type GroupResourceRequest struct {
	ID        string
	GroupID   string
	GroupName string
	Type      string
	Content   string
	Status    string
	CreatedAt string
	UpdatedAt string
}
