CREATE TYPE deu.faculty_enum AS ENUM (
  'Agronomía',
  'Arquitectura y Urbanismo',
  'Ciencias',
  'Ciencias Económicas y Sociales',
  'Ciencias Jurídicas y Políticas',
  'Ciencias Veterinarias',
  'Farmacia',
  'Humanidades y Educación',
  'Ingeniería',
  'Medicina',
  'Odontología',
  'DEU',
  'NA'
);

CREATE TYPE deu.provider_status_enum AS ENUM ('under_review', 'rejected', 'active', 'inactive');

-- Tabla para almacenar información de proveedores. Un proveedor es aquel que tiene código de proveedor asignado por la DEU.
-- Únicamente los coordinadores de cursos y los representantes de grupos de extensión pueden ser proveedores
CREATE TABLE
  deu.providers (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
    user_id INTEGER NOT NULL REFERENCES deu.users (id) ON DELETE CASCADE,
    name VARCHAR,
    party_type VARCHAR CHECK (party_type IN ('natural', 'juridical')),
    profit_type VARCHAR NOT NULL CHECK (profit_type IN ('lucrativo', 'no_lucrativo')),
    is_internal BOOLEAN,
    bio text,
    code VARCHAR,
    status deu.provider_status_enum DEFAULT 'under_review' NOT NULL,
    faculty deu.faculty_enum NULL,
    created_at TIMESTAMP DEFAULT NOW (),
    updated_at TIMESTAMP DEFAULT NOW (),
    deleted_at TIMESTAMP DEFAULT NULL
  );
