CREATE TYPE deu.course_location_enum AS ENUM ('online', 'in_site', 'mixed');

CREATE TYPE deu.course_type_enum AS ENUM (
  'unassigned',
  'skill_development',
  'life_skills',
  'technical_training'
);

-- Tabla para almacenar información de cursos
CREATE TABLE
  deu.courses (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
    name VARCHAR,
    description TEXT, --descripcion
    provider_id INTEGER NOT NULL REFERENCES deu.providers (id) ON DELETE CASCADE, -- ID del proveedor que creó esta entidad de solicitud
    objectives TEXT, --objetivos
    rationale TEXT, -- fundamentacion
    duration VARCHAR, -- duracion
    cost VARCHAR, -- estructura_costos
    instructor_profile TEXT, -- perfil_docente
    profiles TEXT, -- perfiles
    requirements TEXT, -- exigencias
    content TEXT, -- estructura_curricular
    evaluation TEXT, -- evaluacion
    schedule TEXT, -- cronograma
    type deu.course_type_enum DEFAULT 'unassigned', -- Tipo de curso (Formación para el trabajo, Formación técnica/profesional, Formación para toda la vida)
    faculty deu.faculty_enum DEFAULT 'DEU', -- facultad
    location deu.course_location_enum, -- ubicacion
    is_active BOOLEAN DEFAULT FALSE,
    has_documentation BOOLEAN DEFAULT FALSE,
    created_at TIMESTAMP DEFAULT NOW (),
    updated_at TIMESTAMP DEFAULT NOW (),
    deleted_at TIMESTAMP DEFAULT NULL
  );
