-- Tabla para almacenar información de ciclos de cursos
CREATE TABLE
  deu.course_cycles (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
    course_id INTEGER NOT NULL REFERENCES deu.courses (id),
    start_date DATE,
    end_date DATE,
    inscription_date DATE,
    capacity INTEGER NOT NULL DEFAULT 0,
    is_active BOOLEAN DEFAULT TRUE,
    closed_at TIMESTAMP DEFAULT NULL,
    created_at TIMESTAMP DEFAULT NOW (),
    updated_at TIMESTAMP DEFAULT NOW (),
    deleted_at TIMESTAMP DEFAULT NULL
  );
