CREATE TYPE deu.visitante_status_enum AS ENUM ('approved', 'abandoned', 'failed', 'ongoing');

-- Tabla para almacenar información de participantes de cursos
CREATE TABLE
  deu.visitantes (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
    user_id INTEGER NOT NULL REFERENCES deu.users (id) ON DELETE CASCADE,
    course_cycle_id INTEGER NOT NULL REFERENCES deu.course_cycles (id),
    participant_status deu.visitante_status_enum,
    created_at TIMESTAMP DEFAULT NOW (),
    updated_at TIMESTAMP DEFAULT NOW (),
    deleted_at TIMESTAMP DEFAULT NULL,
    UNIQUE (user_id, course_cycle_id)
  );
