-- Tabla para almacenar información de miembros de grupos de extensión
CREATE TABLE
  deu.group_members (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
    group_id INTEGER NOT NULL REFERENCES deu.extension_groups (id) ON DELETE CASCADE,
    name VARCHAR NOT NULL,
    ci INTEGER,
    phone VARCHAR,
    email VARCHAR,
    coordination VARCHAR,
    year VARCHAR,
    faculty deu.faculty_enum DEFAULT 'DEU',
    school VARCHAR,
    document VARCHAR,
    is_leader BOOLEAN DEFAULT FALSE,
    is_active BOOLEAN DEFAULT TRUE,
    created_at TIMESTAMP DEFAULT NOW (),
    updated_at TIMESTAMP DEFAULT NOW (),
    deleted_at TIMESTAMP DEFAULT NULL
  );
