-- Tabla para almacenar información de actividades
CREATE TABLE
  deu.activities (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
    name VARCHAR,
    group_id INTEGER REFERENCES deu.extension_groups (id) ON DELETE SET NULL,
    description TEXT,
    date_start DATE,
    date_end DATE,
    location VARCHAR,
    knowledge_area VARCHAR[] DEFAULT ARRAY[]::VARCHAR[], -- Área de conocimiento relacionada con la actividad
    allies VARCHAR, -- Aliados o colaboradores de la actividad
    group_participants INTEGER, -- Miembros del grupo que participaron
    stimated_participants INTEGER, -- Participantes estimados
    actual_participants INTEGER, -- Participantes reales
    financing VARCHAR, -- Financiamiento
    comments TEXT, -- Observaciones
    gallery_url VARCHAR, -- Enlace a la galería de la actividad en almacenamiento externo
    report_checked BOOLEAN DEFAULT FALSE, -- Campo para marcar si el reporte ya fue chequeado
    is_featured BOOLEAN DEFAULT FALSE, -- Campo para destacar una actividad
    created_at TIMESTAMP DEFAULT NOW (),
    updated_at TIMESTAMP DEFAULT NOW (),
    deleted_at TIMESTAMP
  );
