CREATE TYPE deu.contact_type_enum AS ENUM ('email', 'phone');

CREATE TYPE deu.owner_type_enum AS ENUM ('user', 'provider', 'group');

-- Crear la tabla de contactos con las restricciones y tipos adecuados
-- Tabla para almacenar información de contactos
CREATE TABLE
  deu.contacts (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
    contact_type deu.contact_type_enum NOT NULL DEFAULT 'email',
    contact_value TEXT NOT NULL,
    owner_type deu.owner_type_enum NOT NULL,
    owner_id BIGINT NOT NULL,
    created_at TIMESTAMPTZ DEFAULT NOW (),
    updated_at TIMESTAMPTZ DEFAULT NOW (),
    deleted_at TIMESTAMP DEFAULT NULL,
    CONSTRAINT unique_contact_per_owner UNIQUE (contact_type, contact_value, owner_type, owner_id)
  );

COMMENT ON COLUMN deu.contacts.contact_type IS 'Tipo de contacto: ya sea ''email'' o ''phone''';

COMMENT ON COLUMN deu.contacts.contact_value IS 'El valor real del contacto (por ejemplo, una dirección de correo electrónico o un número de teléfono)';

COMMENT ON COLUMN deu.contacts.owner_type IS 'El tipo de entidad que posee el contacto (''user'' o ''provider'')';

COMMENT ON COLUMN deu.contacts.owner_id IS 'El ID del usuario o proveedor que posee el contacto';

COMMENT ON COLUMN deu.contacts.created_at IS 'Marca de tiempo de cuando se creó la entrada de contacto';
