CREATE TABLE
  deu.files (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
    owner_type TEXT NOT NULL CHECK (
      owner_type IN (
        'course',
        'group',
        'group_activity',
        'course_cycle',
        'provider',
        'user',
        'course_cycle_close_request',
        'provider_contract'
      )
    ),
    owner_id INTEGER NOT NULL,
    file_key TEXT NOT NULL,
    purpose TEXT NOT NULL,
    version INTEGER DEFAULT 1,
    public BOOLEAN DEFAULT false,
    metadata JSONB,
    uploaded_by INTEGER REFERENCES deu.users (id),
    created_at TIMESTAMP DEFAULT NOW (),
    deleted_at TIMESTAMP DEFAULT NULL
  );

CREATE INDEX idx_owner_type_owner_id ON deu.files (owner_type, owner_id);
